# dash-poc

./: Dockerfile  README.md  dash-config.yaml  pyproject.toml
.github/workflows/: ci.yml
