[tool.poetry]
name = "dash-poc"
version = "0.1.0"
description = ""
authors = ["Gerald H Spencer <ger.spencer3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
tox = "^3.24.4"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
